@@ -1,0 +1,36 @@
+"""A long string
+literal
+"""
+
+from bsddb import btopen
+
+# Public global constants
+
+VERSION = '1.2.0'
+
+# Flags for list() and children()
+ALL = 0xff 
+KEY = 0x01
+TREEID = 0x02
+INDENT = 0x04
+DATA = 0x08 # Used by dbtreedata
+
+class one:
+
+    def __init__(self, filename, pathsep='', treegap=64):
+        """Another string
+	literal"""
+
+    def __private_function__(self, key, data):
+    
+    def public_function(self, key):
+
+    def _pack(self, i, s):
+    
+def _test(test, code, outcome, exception):
+
+if __name__ == '__main__':
+
+class two (one):
+
+    def only(arg):
